--- a/config.toml
+++ b/config.toml
@@ -19,10 +19,10 @@ page = "https://admitted-detail-96b.notion.site/No-Secret-Wiki-efb2b939911f4dc2a
   # the following adds the tag <meta name="title" content="Loconotion Test Site"/>
   [[site.meta]]
   name = "title"
-  content = "No Secret Wiki"
+  content = "CodingDad 2.0; No Secret Wiki"
   [[site.meta]]
   name = "description"
-  content = "나 혼자만 알고 싶었다.."
+  content = "남편이자 부모인 20 + N년 차 프로그래머. 유니티 렌더링 X 최적화. 아들과 게임 만들기. 요즘 머신러닝 0년차. "
 
   ## Custom Fonts ##
   # you can specify the name of a google font to use on the site - use the font embed name
@@ -64,9 +64,30 @@ page = "https://admitted-detail-96b.notion.site/No-Secret-Wiki-efb2b939911f4dc2a
   #   <script src="custom-script.js" type="text/javascript"></script>
   # note that all href / src files are copied to the root of the site folder 
   # regardless of their original path
+  #[[site.inject.body.script]]
+  #type="text/javascript"
+  #src="/example/custom-script.js"
+
+  [[site.inject.head.script]]
+  async = "async"
+  src="https://www.googletagmanager.com/gtag/js?id=UA-128068276-5"
+
+  [[site.inject.head.script]]
+  inner_html="""
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128068276-5');
+  """
+
   [[site.inject.body.script]]
-  type="text/javascript"
-  src="/example/custom-script.js"
+  src="https://utteranc.es/client.js"
+  repo="muscly/utterances"
+  issue-term="pathname"
+  theme="github-light"
+  crossorigin="anonymous"
+  async = "async"
 
 ## Individual Page Settings ##
 # the [pages] table defines override settings for individual pages, by defining 
