--- a/config.toml
+++ b/config.toml
@@ -92,21 +92,9 @@ token = "secret_AxpQOzIY1AnIwK2f4NCGsZe5zz5yzx3RfoH3736PFl0"
   async = "async"
 
 [pages]
+  # 404
   [pages.59f6278a93e04df09e80b20b9d2a3bca]
     no-links = true
 
     [[pages.59f6278a93e04df09e80b20b9d2a3bca.inject.body.script]]
-      inner_html="""
-var url = '/';
-
-const regex = /^https://codingdad.me/(2[0-9][0-9][0-9])/([0-9][0-9])/([0-9][0-9])/([a-zA-Z0-9_\-]+)/;
-if (regex.test( window.location.href))
-{
-  const match = window.location.href.match(regex);
-  url = 'https://codingdad.me/' + match[1] + '-' + match[2] + '-' + match[3] + '-' + match[4];
-}
-
-setTimeout(function(){
-  window.location.href = url;
-}, 3000);
-      """
+      src="redirect.js"
