--- a/config.toml
+++ b/config.toml
@@ -97,5 +97,18 @@ token = "secret_AxpQOzIY1AnIwK2f4NCGsZe5zz5yzx3RfoH3736PFl0"
 
     [[pages.59f6278a93e04df09e80b20b9d2a3bca.inject.body.script]]
       inner_html="""
-window.location.href = '/404.html?original=' + encodeURIComponent(window.location.href);
+const originalUrl = window.location.href;
+
+const regexOriginal = new RegExp('^https://codingdad.me/(2[0-9][0-9][0-9])/([0-9][0-9])/([0-9][0-9])/([a-zA-Z0-9_\\-]+)');
+
+var url = '/';
+if (regexOriginal.test(originalUrl))
+{
+  const match = originalUrl.match(regexOriginal);
+  url = 'https://codingdad.me/' + match[1] + '-' + match[2] + '-' + match[3] + '-' + match[4];
+}
+
+setTimeout(function(){
+  window.location.href = url;
+}, 3000);
       """
