--- a/config.toml
+++ b/config.toml
@@ -102,7 +102,7 @@ token = "secret_AxpQOzIY1AnIwK2f4NCGsZe5zz5yzx3RfoH3736PFl0"
       inner_html="""
 const originalUrl = window.location.href;
 
-const regexOriginal = new RegExp('^https://codingdad.me/(2[0-9][0-9][0-9])/([0-9][0-9])/([0-9][0-9])/([a-zA-Z0-9_\\-]+)');
+const regexOriginal = new RegExp('^https://codingdad.me/([0-9]{4})/([0-9]{2})/([0-9]{2})/([a-zA-Z0-9_\\-]+)');
 
 var url = '/';
 if (regexOriginal.test(originalUrl))
