--- a/config.toml
+++ b/config.toml
@@ -29,6 +29,28 @@ cover_img_url = "https://codingdad.me/codingdad_logo.png"
   [[site.meta]]
   name = "description"
   content = "아들과 게임 만드는 걸 좋아하는 프로그래머입니다."
+  [[site.meta]]
+  property = "og:type"
+  content = "Website"
+  [[site.meta]]
+  property = "og:title"
+  content = "CodingDad 2.0; No Secret Wiki"
+  [[site.meta]]
+  property = "og:description"
+  content = "아들과 게임 만드는 걸 좋아하는 프로그래머입니다."
+  [[site.meta]]
+  property = "og:image"
+  content = "https://codingdad.me/codingdad_logo.png"
+  [[site.meta]]
+  name = "twitter:card"
+  content = "summary"
+  [[site.meta]]
+  name = "twitter:site"
+  content = "@mycodingdad"
+  [[site.meta]]
+  name = "twitter:creator"
+  content = "@mycodingdad"
+
 
   ## Custom Fonts ##
   # you can specify the name of a google font to use on the site - use the font embed name
